src/tests/fixtures/directives/directiveOnArgumentDefinition.ts.expected
-----------------
INPUT
----------------- 
import { Int } from "../../../Types";
/**
 * This is my custom directive.
 * @gqlDirective
 * @on ARGUMENT_DEFINITION
 */
export function max(args: { foo: Int }) {}

/**
 * All likes in the system. Note that there is no guarantee of order.
 * @gqlQueryField */
export function likes(args: {
  /** @max(foo: ["a", "b"]) */
  first?: Int | null;
}): string {
  return "hello";
}

-----------------
OUTPUT
-----------------
GraphQL request:1:11 - error: Int cannot represent non-integer value: ["a", "b"]

1 @max(foo: ["a", "b"])
            ~~~~~~~~~~

